--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <title>CMS Admin</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="static/css/all.css" >
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 </link>
 </head>
 <body>
@@ -25,7 +26,7 @@
     </div>
     <div id="center-column">
       <div class="top-bar"> 
-        <form action ="product/add" method="post" name="productAdd">
+        <form action ="product/add" method="post" name="productAdd" id="productAdd">
         <div class="one">Название продукта</div>
         <div class="two">Количество продукта</div> <br>
         <input class="one" type="text" name="productName" /> 
@@ -33,11 +34,9 @@
         <input type="submit" value="Send" class="submitProduct" />
         <div class="floatClear"></div>
         </form>
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script>
-        $("form").submit(function(e){
+        $("#productAdd").submit(function(e){
           e.preventDefault();
-          console.log("ENTERED42342");
           var productForm = document.forms["productAdd"];
           var productName = productForm.elements["productName"].value;
           var productQuantity = productForm.elements["productQuantity"].value;
@@ -49,8 +48,7 @@
             dataType: "json",
             contentType: "application/json",
             complete: function(data) {
-              console.log(data);
-              location.reload(true);
+              window.location.href = "/";
             }
           })
         })
@@ -58,12 +56,29 @@
       </div>
       <br />
       <div class="select-bar">
+        <form action ="product/search" method="post" name="productSearch" id="productSearch">
         <label>
-        <input type="text" name="textfield" />
+        <input type="text" name="productName" />
         </label>
         <label>
         <input type="submit" name="Submit" value="Искать" />
         </label>
+        </form>
+        <script>
+            $("#productSearch").submit(function(e){
+              console.log("Stepped");
+              e.preventDefault();
+              var productForm = document.forms["productSearch"];
+              var productName = productForm.elements["productName"].value;
+              $.ajax({
+                type: "POST",
+                url: "/product/search",
+                data: JSON.stringify({name: productName}),
+                dataType: "json",
+                contentType: "application/json"
+              })
+            })
+            </script>
       </div>
       <div class="table"> <img src="static/img/bg-th-left.gif" width="8" height="7" alt="" class="left" /> <img src="static/img/bg-th-right.gif" width="7" height="7" alt="" class="right" />
         <table class="listing" cellpadding="0" cellspacing="0">
